# github-scbot

./: .dockerignore  .editorconfig  .env.sample  .gitignore  .rustfmt.toml  CHANGELOG.md  Cargo.toml  Justfile  LICENSE  README.md  diesel.toml  export.json  rust-toolchain  rust-toolchain.toml  test.json
crates/github-scbot-cli/: Cargo.toml  README.md
crates/github-scbot-cli/src/: args.rs  commands.rs  config_validator.rs  errors.rs  lib.rs  main.rs  testutils.rs  utils.rs
crates/github-scbot-cli/src/commands/: auth.rs  export.rs  import.rs  mod.rs  pull_request.rs  repository.rs  server.rs  ui.rs
crates/github-scbot-core/: Cargo.toml
crates/github-scbot-core/src/: config.rs  lib.rs  sentry.rs  types.rs
crates/github-scbot-core/src/config/: config.rs  errors.rs  logging.rs  mod.rs  validation.rs
crates/github-scbot-core/src/crypto/: errors.rs  jwt.rs  mod.rs  rsa.rs  sig.rs
crates/github-scbot-core/src/sentry/: client.rs  debug.rs
crates/github-scbot-core/src/types/: checks.rs  common.rs  errors.rs  events.rs  issues.rs  labels.rs  ping.rs  pulls.rs  repository.rs  reviews.rs  rule_branch.rs  status.rs
crates/github-scbot-core/src/utils/: mod.rs
crates/github-scbot-crypto/: Cargo.toml
crates/github-scbot-crypto/src/: errors.rs  jwt.rs  lib.rs  sig.rs
crates/github-scbot-database/: Cargo.toml
crates/github-scbot-database-interface/: Cargo.toml
crates/github-scbot-database-interface/src/: errors.rs  exchange.rs  interface.rs
crates/github-scbot-database-memory/: Cargo.toml
crates/github-scbot-database-memory/src/: lib.rs
crates/github-scbot-database-pg/: Cargo.toml
crates/github-scbot-database-pg/src/: fields.rs  lib.rs  postgres.rs  row.rs  utils.rs
crates/github-scbot-database-tests/: Cargo.toml
crates/github-scbot-database-tests/src/: account.rs  external_account.rs  external_account_right.rs  lib.rs  merge_rule.rs  pull_request.rs  repository.rs  required_reviewer.rs  testcase.rs
crates/github-scbot-database/src/: errors.rs  exchange.rs  interface.rs  lib.rs  memory.rs  postgres.rs  utils.rs
crates/github-scbot-database/src/models/: account.rs  external_account.rs  external_account_right.rs  health.rs  merge_rule.rs  pull_request.rs  repository.rs  required_reviewer.rs
crates/github-scbot-database2/: Cargo.toml
crates/github-scbot-database2/src/: fields.rs  lib.rs
crates/github-scbot-database2/src/models/: account.rs  external_account.rs  external_account_right.rs  repository.rs
crates/github-scbot-domain/: Cargo.toml
crates/github-scbot-domain-models/: Cargo.toml
crates/github-scbot-domain-models/src/: checks_status.rs  external_account.rs  lib.rs  merge_rule.rs  pull_request.rs  pull_request_handle.rs  qa_status.rs  repository.rs  repository_path.rs  required_reviewer.rs  step_label.rs
crates/github-scbot-domain/src/: auth.rs  checks.rs  commands.rs  comments.rs  errors.rs  external.rs  lib.rs  pulls.rs  reviews.rs  status.rs  use_cases.rs
crates/github-scbot-domain/src/commands/: command.rs  commands.rs  mod.rs  parser.rs
crates/github-scbot-domain/src/status/: pull_status.rs
crates/github-scbot-domain/src/summary/: sender.rs  text_generator.rs
crates/github-scbot-domain/src/tests/: pr_creation.rs
crates/github-scbot-domain/src/use_cases/: auth.rs  checks.rs  comments.rs  mod.rs  pulls.rs  status.rs  summary.rs
crates/github-scbot-ghapi/: Cargo.toml
crates/github-scbot-ghapi-github/: Cargo.toml  README.md
crates/github-scbot-ghapi-github/src/: auth.rs  errors.rs  github.rs  lib.rs
crates/github-scbot-ghapi-impl/: Cargo.toml
crates/github-scbot-ghapi-impl/src/: auth.rs  github.rs
crates/github-scbot-ghapi-interface/: Cargo.toml
crates/github-scbot-ghapi-interface/src/: comments.rs  errors.rs  gif.rs  gif_api.rs  interface.rs  labels.rs  lib.rs  review.rs  reviews.rs
crates/github-scbot-ghapi-interface/src/types/: mod.rs
crates/github-scbot-ghapi/src/: auth.rs  comments.rs  errors.rs  gif.rs  labels.rs  lib.rs  reviews.rs
crates/github-scbot-ghapi/src/adapter/: github.rs  interface.rs
crates/github-scbot-lock-interface/: Cargo.toml
crates/github-scbot-lock-interface/src/: errors.rs  interface.rs  lib.rs  lock_instance.rs
crates/github-scbot-lock-redis/: Cargo.toml  README.md
crates/github-scbot-lock-redis/src/: lib.rs  redis.rs
crates/github-scbot-logging/: Cargo.toml
crates/github-scbot-logging/src/: lib.rs
crates/github-scbot-logic/: Cargo.toml  README.md
crates/github-scbot-logic/src/: auth.rs  checks.rs  comments.rs  errors.rs  external.rs  gif.rs  lib.rs  pulls.rs  reviews.rs
crates/github-scbot-redis/: Cargo.toml
crates/github-scbot-redis/src/: errors.rs  interface.rs  lib.rs  lock_instance.rs  redis.rs
crates/github-scbot-sentry/: Cargo.toml
crates/github-scbot-sentry/src/: client.rs  debug.rs
crates/github-scbot-server/: Cargo.toml  README.md
crates/github-scbot-server/src/: constants.rs  debug.rs  errors.rs  ghapi.rs  health.rs  lib.rs  middlewares.rs  redis.rs  server.rs  utils.rs  webhook.rs
crates/github-scbot-tui/: Cargo.toml
crates/github-scbot-tui/src/: app.rs  errors.rs  lib.rs  state.rs  terminal.rs
crates/github_scbot/: Cargo.toml  README.md
crates/github_scbot/src/: errors.rs  lib.rs  main.rs
crates/github_scbot/src/shell/: mod.rs
crates/github_scbot_api/: Cargo.toml
crates/github_scbot_api/src/: auth.rs  checks.rs  comments.rs  constants.rs  errors.rs  gif.rs  labels.rs  lib.rs  pulls.rs  reviews.rs  status.rs
crates/github_scbot_cli/: Cargo.toml
crates/github_scbot_cli/src/: errors.rs  lib.rs  main.rs  utils.rs
crates/github_scbot_conf/: Cargo.toml  README.md
crates/github_scbot_conf/src/: config.rs  errors.rs  lib.rs  logging.rs  sentry.rs  validation.rs
crates/github_scbot_database/: Cargo.toml  README.md
crates/github_scbot_database/src/: constants.rs  errors.rs  import_export.rs  lib.rs  schema.rs  tests.rs
crates/github_scbot_database2/: Cargo.toml  README.md
crates/github_scbot_database2/migrations/: 202204101054_squash.sql
crates/github_scbot_database2/src/: errors.rs  exchange.rs  fields.rs  lib.rs  utils.rs
(+1022 files in other folders)
