[workspace]
members = [
    "crates/github_scbot_cli",
    "crates/github_scbot_conf",
    "crates/github_scbot_crypto",
    "crates/github_scbot_database",
    "crates/github_scbot_database_macros",
    "crates/github_scbot_database2",
    "crates/github_scbot_ghapi",
    "crates/github_scbot_logic",
    "crates/github_scbot_redis",
    "crates/github_scbot_server",
    "crates/github_scbot_sentry",
    "crates/github_scbot_tui",
    "crates/github_scbot_types",
    "crates/github_scbot_utils",
    "crates/sentry-eyre",
    "crates/sentry-actix"
]

[profile.dev.package.backtrace]
opt-level = 3

[profile.dev.package.num-bigint-dig]
opt-level = 3

[profile.release]
debug = true
