[package]
name = "github-scbot-cli"
version = "0.23.0-dev"
authors = ["Denis BOURGE <denis.bourge@sharingcloud.com>"]
edition = "2021"

[dependencies]
github-scbot-core = { path = "../github-scbot-core" }
github-scbot-ghapi-interface = { path = "../github-scbot-ghapi-interface" }
github-scbot-database = { path = "../github-scbot-database" }
github-scbot-domain = { path = "../github-scbot-domain" }
github-scbot-server = { path = "../github-scbot-server" }
github-scbot-tui = { path = "../github-scbot-tui" }
github-scbot-lock-interface = { path = "../github-scbot-lock-interface" }

actix-rt = "2.7.0"
anyhow = { version = "1.0", features = ["backtrace"] }
async-trait = "0.1.56"
argh = "0.1.8"
dialoguer = "0.10.1"
tokio = { version = "1.20.1", features = ["full"] }
clap = { version = "3.2.15", features = ["derive"] }

[dev-dependencies]
futures-util = "0.3.21"
indoc = "1.0.6"
mockall = "0.11.2"
