[package]
name = "github-scbot-crypto"
version = "0.24.0"
authors = ["Denis BOURGE <denis.bourge@sharingcloud.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.4.3"
hmac = "0.12.1"
jsonwebtoken = "9.1.0"
rand = "0.8.5"
rsa = "0.9.4"
sha2 = "0.10.8"
serde = { version = "1.0.193", features = ["derive"] }
thiserror = "1.0.50"
