[package]
name = "github-scbot-database-interface"
version = "0.23.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
github-scbot-crypto = { path = "../github-scbot-crypto" }
github-scbot-domain-models = { path = "../github-scbot-domain-models" }

async-trait = "0.1.67"
serde = { version = "1.0.157", features = ["derive"] }
serde_json = "1.0.94"
thiserror = "1.0.40"
