[package]
name = "github-scbot-database-interface"
version = "0.24.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
github-scbot-crypto = { path = "../github-scbot-crypto" }
github-scbot-domain-models = { path = "../github-scbot-domain-models" }

async-trait = "0.1.74"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
thiserror = "1.0.50"
