[package]
name = "github-scbot-database-memory"
version = "0.23.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
github-scbot-database-interface = { path = "../github-scbot-database-interface" }
github-scbot-domain-models = { path = "../github-scbot-domain-models" }

async-trait = "0.1.67"
