[package]
name = "github-scbot-database-pg"
version = "0.23.0-dev"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
github-scbot-config = { path = "../github-scbot-config" }
github-scbot-database-interface = { path = "../github-scbot-database-interface" }
github-scbot-domain-models = { path = "../github-scbot-domain-models" }

async-trait = "0.1.66"
sqlx = { version = "0.6.2", features = ["runtime-actix-native-tls", "postgres"] }
tracing = "0.1.37"

[dev-dependencies]
actix-rt = "2.8.0"
pretty_assertions = "1.3.0"
