[package]
name = "github-scbot-database-pg"
version = "0.23.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
github-scbot-config = { path = "../github-scbot-config" }
github-scbot-database-interface = { path = "../github-scbot-database-interface" }
github-scbot-domain-models = { path = "../github-scbot-domain-models" }

async-trait = "0.1.67"
sqlx = { version = "0.6.2", features = ["runtime-tokio-native-tls", "postgres"] }
tracing = "0.1.37"

[dev-dependencies]
pretty_assertions = "1.3.0"
