[package]
name = "github-scbot-database-tests"
version = "0.23.0-dev"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
github-scbot-domain-models = { path = "../github-scbot-domain-models" }
github-scbot-database-pg = { path = "../github-scbot-database-pg" }
github-scbot-database-memory = { path = "../github-scbot-database-memory" }
github-scbot-database-interface = { path = "../github-scbot-database-interface" }
github-scbot-core = { path = "../github-scbot-core" }
futures = "0.3.21"

[dev-dependencies]
pretty_assertions = "1.2.1"
actix-rt = "2.7.0"
