[package]
name = "github-scbot-database-tests"
version = "0.23.0-dev"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
github-scbot-config = { path = "../github-scbot-config" }
github-scbot-database-interface = { path = "../github-scbot-database-interface" }
github-scbot-database-memory = { path = "../github-scbot-database-memory" }
github-scbot-database-pg = { path = "../github-scbot-database-pg" }
github-scbot-domain-models = { path = "../github-scbot-domain-models" }

futures = "0.3.27"

[dev-dependencies]
actix-rt = "2.8.0"
pretty_assertions = "1.3.0"
