[package]
name = "github-scbot-database-tests"
version = "0.24.0-dev"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
github-scbot-config = { path = "../github-scbot-config" }
github-scbot-database-interface = { path = "../github-scbot-database-interface" }
github-scbot-database-memory = { path = "../github-scbot-database-memory" }
github-scbot-database-pg = { path = "../github-scbot-database-pg" }
github-scbot-domain-models = { path = "../github-scbot-domain-models" }

futures = "0.3.27"

[dev-dependencies]
tokio = { version = "1.26.0", features = ["rt", "macros"] }
pretty_assertions = "1.3.0"
