[package]
name = "github-scbot-database"
version = "0.23.0-dev"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.56"
derive_builder = "0.11.2"
futures = "0.3.21"
futures-util = "0.3.21"
github-scbot-core = { path = "../github-scbot-core" }
github-scbot-macros = { path = "../github-scbot-macros" }
mockall = "0.11.2"
serde = { version = "1.0.140", features = ["derive"] }
serde_json = "1.0.82"
sqlx = { version = "0.6.0", features = ["runtime-actix-native-tls", "postgres"] }
thiserror = "1.0.37"
tracing = "0.1.35"

[dev-dependencies]
pretty_assertions = "1.2.1"
actix-rt = "2.7.0"
