[package]
name = "github-scbot-database2"
version = "0.22.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.53"
derive_builder = "0.11.1"
futures = "0.3.21"
futures-util = "0.3.21"
github-scbot-core = { path = "../github-scbot-core" }
github-scbot-macros = { path = "../github-scbot-macros" }
mockall = "0.11.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
snafu = "0.7.1"
sqlx = { version = "0.5.11", features = ["runtime-actix-native-tls", "postgres"] }
tracing = "0.1"

[dev-dependencies]
pretty_assertions = "0.6"
actix-rt = "2"
