[package]
name = "github-scbot-domain-models"
version = "0.23.0-dev"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
github-scbot-core = { path = "../github-scbot-core" }
serde = { version = "1.0.140", features = ["derive"] }
thiserror = "1.0.37"
