[package]
name = "github-scbot-domain-models"
version = "0.23.0-dev"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
github-scbot-config = { path = "../github-scbot-config" }
github-scbot-crypto = { path = "../github-scbot-crypto" }

serde = { version = "1.0.156", features = ["derive"] }
thiserror = "1.0.39"
