[package]
name = "github-scbot-domain"
version = "0.23.0"
authors = ["Denis BOURGE <denis.bourge@sharingcloud.com>"]
edition = "2021"

[dependencies]
github-scbot-config = { path = "../github-scbot-config" }
github-scbot-crypto = { path = "../github-scbot-crypto" }
github-scbot-database-interface = { path = "../github-scbot-database-interface" }
github-scbot-domain-models = { path = "../github-scbot-domain-models" }
github-scbot-ghapi-interface = { path = "../github-scbot-ghapi-interface" }
github-scbot-lock-interface = { path = "../github-scbot-lock-interface" }

async-trait = "0.1.67"
rand = "0.8.5"
regex = "1.7.1"
thiserror = "1.0.40"
tracing = "0.1.37"

[dev-dependencies]
github-scbot-database-memory = { path = "../github-scbot-database-memory" }

tokio = { version = "1.26.0", features = ["rt", "macros"] }
maplit = "1.0.2"
pretty_assertions = "1.3.0"
time = { version = "0.3.20" }
