[package]
name = "github-scbot-ghapi-github"
version = "0.23.0-dev"
authors = ["Denis BOURGE <denis.bourge@sharingcloud.com>"]
edition = "2021"

[dependencies]
github-scbot-config = { path = "../github-scbot-config" }
github-scbot-crypto = { path = "../github-scbot-crypto" }
github-scbot-ghapi-interface = { path = "../github-scbot-ghapi-interface" }

async-trait = "0.1.66"
backoff = { version = "0.4.0", features = ["tokio"] }
http = "0.2.9"
reqwest = { version = "0.11.14", features = ["json"] }
serde = { version = "1.0.156", features = ["derive"] }
thiserror = "1.0.39"
tracing = "0.1.37"

[dev-dependencies]
actix-rt = "2.8.0"
