[package]
name = "github-scbot-ghapi-github"
version = "0.24.0"
authors = ["Denis BOURGE <denis.bourge@sharingcloud.com>"]
edition = "2021"

[dependencies]
github-scbot-config = { path = "../github-scbot-config" }
github-scbot-crypto = { path = "../github-scbot-crypto" }
github-scbot-ghapi-interface = { path = "../github-scbot-ghapi-interface" }

async-trait = "0.1.74"
backoff = { version = "0.4.0", features = ["tokio"] }
http = "0.2.11"
reqwest = { version = "0.11.22", features = ["json"] }
serde = { version = "1.0.193", features = ["derive"] }
thiserror = "1.0.50"
tokio = { version = "1.34.0", features = ["rt", "macros", "sync"] }
tracing = "0.1.40"
lazy_static = "1.4.0"

[dev-dependencies]
github-scbot-ghapi-interface = { path = "../github-scbot-ghapi-interface", features = ["testkit"] }
