[package]
name = "github-scbot-ghapi-impl"
version = "0.23.0-dev"
authors = ["Denis BOURGE <denis.bourge@sharingcloud.com>"]
edition = "2021"

[dependencies]
github-scbot-core = { path = "../github-scbot-core" }
github-scbot-ghapi-interface = { path = "../github-scbot-ghapi-interface" }

async-trait = "0.1.56"
http = "0.2.8"
reqwest = { version = "0.11.11", features = ["json"] }
serde = { version = "1.0.140", features = ["derive"] }
tracing = "0.1.35"
backoff = { version = "0.4.0", features = ["tokio"] }
thiserror = "1.0.37"

[dev-dependencies]
actix-rt = "2.7.0"
