[package]
name = "github-scbot-ghapi-interface"
version = "0.23.0-dev"
authors = ["Denis BOURGE <denis.bourge@sharingcloud.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.56"
heck = "0.4.0"
mockall = "0.11.2"
serde = { version = "1.0.140", features = ["derive"] }
serde_plain = "1.0.0"
smart-default = "0.6.0"
thiserror = "1.0.37"
time = { version = "0.3.11", features = ["serde", "serde-well-known"] }

[dev-dependencies]
actix-rt = "2.7.0"
