[package]
name = "github-scbot-ghapi-interface"
version = "0.23.1"
authors = ["Denis BOURGE <denis.bourge@sharingcloud.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.67"
heck = "0.4.1"
serde = { version = "1.0.157", features = ["derive"] }
serde_plain = "1.0.1"
smart-default = "0.6.0"
thiserror = "1.0.40"
time = { version = "0.3.20", features = ["serde", "serde-well-known"] }

mockall = { version = "0.11.3", optional = true }

[features]
default = []
testkit = ["mockall"]
