[package]
name = "github-scbot-ghapi-interface"
version = "0.24.0-dev"
authors = ["Denis BOURGE <denis.bourge@sharingcloud.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.74"
heck = "0.4.1"
serde = { version = "1.0.193", features = ["derive"] }
serde_plain = "1.0.2"
smart-default = "0.7.1"
thiserror = "1.0.50"
time = { version = "0.3.30", features = ["serde", "serde-well-known"] }

mockall = { version = "0.11.4", optional = true }

[features]
default = []
testkit = ["mockall"]
