[package]
name = "github-scbot-ghapi"
version = "0.22.0"
authors = ["Denis BOURGE <denis.bourge@sharingcloud.com>"]
edition = "2021"

[dependencies]
github-scbot-core = { path = "../github-scbot-core" }

async-trait = "0.1.56"
futures-util = "0.3.21"
heck = "0.4.0"
http = "0.2.8"
mockall = "0.11.2"
rand = "0.8.5"
reqwest = { version = "0.11.11", features = ["json"] }
serde = { version = "1.0.140", features = ["derive"] }
serde_json = "1.0.82"
serde_plain = "1.0.0"
snafu = "0.7.1"
tracing = "0.1.35"
backoff = { version = "0.4.0", features = ["tokio"] }

[dev-dependencies]
actix-rt = "2.7.0"
maplit = "1.0.2"
