[package]
name = "github-scbot-lock-redis"
version = "0.23.0-dev"
authors = ["Denis BOURGE <denis.bourge@sharingcloud.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
github-scbot-lock-interface = { path = "../github-scbot-lock-interface" }

actix = "0.13.0"
actix-redis = "0.12.0"
async-trait = "0.1.66"
redis-async = "0.13.0"
tracing = "0.1.37"

[dev-dependencies]
actix-rt = "2.8.0"
