[package]
name = "github-scbot-lock-redis"
version = "0.24.0"
authors = ["Denis BOURGE <denis.bourge@sharingcloud.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
github-scbot-lock-interface = { path = "../github-scbot-lock-interface" }

redis = { version = "0.23.3", features = ["tokio-comp"] }
tokio = { version = "1.34.0", features = ["time"] }
async-trait = "0.1.74"
tracing = "0.1.40"
