[package]
name = "github-scbot-logging"
version = "0.23.0-dev"
authors = ["Denis BOURGE <denis.bourge@sharingcloud.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
github-scbot-config = { path = "../github-scbot-config" }
github-scbot-sentry = { path = "../github-scbot-sentry" }

thiserror = "1.0.40"
tracing = "0.1.37"
tracing-bunyan-formatter = "0.3.6"
tracing-error = "0.2.0"
tracing-log = "0.1.3"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
tracing-tree = "0.2.2"
