[package]
name = "github-scbot-logic"
version = "0.23.0-rc1"
authors = ["Denis BOURGE <denis.bourge@sharingcloud.com>"]
edition = "2021"

[dependencies]
github-scbot-core = { path = "../github-scbot-core" }
github-scbot-database = { path = "../github-scbot-database" }
github-scbot-ghapi = { path = "../github-scbot-ghapi" }
github-scbot-redis = { path = "../github-scbot-redis" }

regex = "1.6.0"
smart-default = "0.6.0"
snafu = "0.7.1"
tracing = "0.1.35"

[dev-dependencies]
actix-rt = "2.7.0"
futures-util = "0.3.21"
maplit = "1.0.2"
mockall = "0.11.2"
pretty_assertions = "1.2.1"
