[package]
name = "github-scbot-redis"
version = "0.23.0-dev"
authors = ["Denis BOURGE <denis.bourge@sharingcloud.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.0"
actix-redis = "0.12.0"
async-trait = "0.1.56"
mockall = "0.11.2"
redis-async = "0.13.0"
tracing = "0.1.35"
thiserror = "1.0.37"

[dev-dependencies]
actix-rt = "2.7.0"
