[package]
name = "github-scbot-sentry"
version = "0.24.0-dev"
authors = ["Denis BOURGE <denis.bourge@sharingcloud.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
github-scbot-config = { path = "../github-scbot-config" }

sentry = { version = "0.30.0", features = ["tracing", "debug-images"] }
tracing = "0.1.37"
