[package]
name = "github-scbot-server"
version = "0.23.0-dev"
authors = ["Denis BOURGE <denis.bourge@sharingcloud.com>"]
edition = "2021"

[dependencies]
github-scbot-config = { path = "../github-scbot-config" }
github-scbot-crypto = { path = "../github-scbot-crypto" }
github-scbot-database-interface = { path = "../github-scbot-database-interface" }
github-scbot-database-pg = { path = "../github-scbot-database-pg" }
github-scbot-domain = { path = "../github-scbot-domain" }
github-scbot-domain-models = { path = "../github-scbot-domain-models" }
github-scbot-ghapi-github = { path = "../github-scbot-ghapi-github" }
github-scbot-ghapi-interface = { path = "../github-scbot-ghapi-interface" }
github-scbot-lock-interface = { path = "../github-scbot-lock-interface" }
github-scbot-lock-redis = { path = "../github-scbot-lock-redis" }
github-scbot-sentry = { path = "../github-scbot-sentry" }

actix-cors = "0.6.4"
actix-http = "3.3.1"
actix-web = "4.3.1"
actix-web-httpauth = "0.8.0"
actix-web-prom = "0.6.0"
async-trait = "0.1.66"
futures = "0.3.27"
lazy_static = "1.4.0"
prometheus = { version = "0.13.3", features = ["process"] }
sentry-actix = "0.30.0"
serde = { version = "1.0.156", features = ["derive"] }
serde_json = "1.0.94"
thiserror = "1.0.39"
time = { version = "0.3.20" }
tracing = "0.1.37"
tracing-actix-web = "0.7.2"

[dev-dependencies]
pretty_assertions = "1.3.0"
