[package]
name = "github-scbot-server"
version = "0.24.0"
authors = ["Denis BOURGE <denis.bourge@sharingcloud.com>"]
edition = "2021"

[dependencies]
github-scbot-config = { path = "../github-scbot-config" }
github-scbot-crypto = { path = "../github-scbot-crypto" }
github-scbot-database-interface = { path = "../github-scbot-database-interface" }
github-scbot-database-pg = { path = "../github-scbot-database-pg" }
github-scbot-domain = { path = "../github-scbot-domain" }
github-scbot-domain-models = { path = "../github-scbot-domain-models" }
github-scbot-ghapi-github = { path = "../github-scbot-ghapi-github" }
github-scbot-ghapi-interface = { path = "../github-scbot-ghapi-interface" }
github-scbot-lock-interface = { path = "../github-scbot-lock-interface" }
github-scbot-lock-redis = { path = "../github-scbot-lock-redis" }
github-scbot-sentry = { path = "../github-scbot-sentry" }

actix-cors = "0.6.4"
actix-http = "3.4.0"
actix-web = "4.4.0"
actix-web-httpauth = "0.8.1"
actix-web-prom = "0.7.0"
async-trait = "0.1.74"
futures = "0.3.29"
lazy_static = "1.4.0"
prometheus = { version = "0.13.3", features = ["process"] }
sentry-actix = "0.31.8"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
thiserror = "1.0.50"
time = { version = "0.3.30" }
tracing = "0.1.40"

[dev-dependencies]
github-scbot-database-memory = { path = "../github-scbot-database-memory" }

pretty_assertions = "1.4.0"
tokio = { version = "1.34.0", features = ["rt", "macros"] }
