[package]
name = "github-scbot-tui"
version = "0.24.0"
authors = ["Denis BOURGE <denis.bourge@sharingcloud.com>"]
edition = "2021"

[dependencies]
github-scbot-database-interface = { path = "../github-scbot-database-interface" }
github-scbot-domain-models = { path = "../github-scbot-domain-models" }

crossterm = "0.27.0"
thiserror = "1.0.50"
tui = "0.19.0"
