[package]
name = "github-scbot"
version = "0.1.0"
authors = ["Denis BOURGE <denis.bourge@sharingcloud.com>"]
edition = "2018"

[dependencies]
github-scbot-core = { path = "../github_scbot_core" }
github-scbot-database = { path = "../github_scbot_database" }
github-scbot-logic = { path = "../github_scbot_logic" }
github-scbot-server = { path = "../github_scbot_server" }
github-scbot-tui = { path = "../github_scbot_tui" }
github-scbot-types = { path = "../github_scbot_types" }
actix-rt = "1"
anyhow = "1.0"
dialoguer = "0.7.1"
owo-colors = "1.2"
structopt = "0.3"
thiserror = "1.0"
